--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="public_html/css/style.css">
 
-    <title>Jennie Molly</title>
+    <title>VCard - Jennie Molly</title>
   </head>
   <body>
     
